tests/bad/func/labelled_instead_of_positional.oc
/// fail: Expected positional argument `a`, but got label `c`


def foo(a: u32, b: u32, c: u32 = 5): u32 => a + b + c

def main() {
    foo(c: 7)
}